[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noip_renewer"
version = "0.1.1"
authors = [
    { name = "Shaun Ostoic", email = "ostoic@proton.me" },
]

description = "Automated dynamic IP host renewer."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["selenium", "loguru"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
noip_renewer = "noip_renewer:cli"

[tool.pylint]
max-line-length = 100
disable = "too-many-arguments"
good-names = ['s', 'db', 'n', 'i']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["I", "E", "F", "B", "W"]

ignore = [
    "F821",
    "F401",
    "F841",
    # "B018",
] # Remove ruff disable lint option from quick actions. Also disable removing unused imports since __init__.py in library packages follow this pattern.

[tool.black]
experimental-string-processing = true
